--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,8 @@
+# Dockerfile for Node.js Express backend with Prisma
+# 1. Installs dependencies
+# 2. Generates Prisma client
+# 3. Starts server on port 5000
+
 FROM node:18
 
 WORKDIR /app
