add Project and Task models to Prisma schema; add Prisma Studio service to Docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,8 @@
-# Dockerfile for Node.js Express backend with Prisma
+# Dockerfile for Node.js Express backend with Prisma and Prisma Studio
 # 1. Installs dependencies
 # 2. Generates Prisma client
 # 3. Starts server on port 5000
-
-FROM node:18
+FROM node:18-slim
 
 WORKDIR /app
 
@@ -16,4 +15,4 @@ RUN npx prisma generate
 
 EXPOSE 5000
 
-CMD ["npm", "start"]
+CMD ["sh", "-c", "npm run db:deploy && npm start"]
