Add coverage for tests

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ package-lock.json
 backend/prisma/migrations/
 backend/generated/prisma
 backend/prisma/generated/prisma
+backend/coverage
+backend/.nyc_output
