--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   backend:
     build: .
@@ -32,13 +30,13 @@ services:
       - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
-    networks:
-      - backend-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d project_tool"]
       interval: 5s
       timeout: 2s
       retries: 20
+    networks:
+      - backend-network
 
   prisma-studio:
     image: node:18-alpine
@@ -57,6 +55,24 @@ services:
         condition: service_healthy
     networks:
       - backend-network
+    profiles:
+      - studio
+
+  backend-tests:
+    build: .
+    container_name: pm-backend-tests
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/project_tool?schema=public
+      - JWT_SECRET=supersecretkey
+      - NODE_ENV=test
+    volumes:
+      - .:/app
+    working_dir: /app
+    networks:
+      - backend-network
+    profiles:
+      - tests
+
 
 volumes:
   pgdata:
