--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "studio": "npx prisma studio",
     "lint": "eslint .",
     "test:unit": "mocha tests/unit/**/*.test.js --exit",
-    "test:integration": "mocha tests/integration/**/*.test.js"
+    "test:integration": "mocha tests/integration/**/*.test.js",
+    "coverage": "nyc npm run test:unit"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -35,6 +36,7 @@
     "eslint": "^9.30.0",
     "mocha": "^11.7.1",
     "nodemon": "^3.1.10",
+    "nyc": "^17.1.0",
     "prisma": "^6.10.1"
   }
 }
