--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,14 +3,15 @@ services:
     build: .
     container_name: pm-backend
     ports:
-      - '5000:5000'
+      - "${BACKEND_PORT}:${PORT}"
     depends_on:
       postgres:
         condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/project_tool?schema=public
-      - JWT_SECRET=supersecretkey
-      - NODE_ENV=development
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - NODE_ENV=${NODE_ENV}
+      - PORT=${PORT}
     volumes:
       - .:/app
     command: >
@@ -23,15 +24,15 @@ services:
     container_name: pm-postgres
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: project_tool
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - '5432:5432'
+      - '${POSTGRES_PORT}:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d project_tool"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -45,9 +46,9 @@ services:
     volumes:
       - .:/app
     ports:
-      - "5555:5555"
+      - "${STUDIO_PORT}:5555"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/project_tool?schema=public
+      - DATABASE_URL=${DATABASE_URL}
     command: >
       sh -c "npm install && npx prisma generate && npx prisma studio --port 5555 --browser none"
     depends_on:
@@ -62,8 +63,8 @@ services:
     build: .
     container_name: pm-backend-tests
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/project_tool?schema=public
-      - JWT_SECRET=supersecretkey
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
       - NODE_ENV=test
     volumes:
       - .:/app
@@ -72,7 +73,6 @@ services:
       - backend-network
     profiles:
       - tests
-
 
 volumes:
   pgdata:
