--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.10.0",
     "proxyquire": "^2.1.3",
     "sinon": "^21.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
